# RustIndexer

./: Cargo.toml  Readme.md
src/: config.rs  main.rs  types.rs
src/controllers/: index_controller.rs  main_controller.rs  mod.rs  search_controller.rs
src/custom_button/: imp.rs  mod.rs
src/models/: index_model.rs
src/resources/: termirust.gresource.xml
src/resources/ui/: gears-menu.ui  prefs.ui  window.ui
src/views/: browse_view.rs  index_view.rs  main_view.rs  mod.rs  search_view.rs
src/widgets/: menu_bar.rs  mod.rs  screen.rs
