[package]

name = "termirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
log = "0.4.20"
back_end_indexer = { git = "https://github.com/DevprojectEkla/back_end_indexer.git", branch = "main" }
# [package.metadata.docs.rs]
# all-features = false
# [exclude]

# unicode-ident = "1.0.12"
# libc = "0.2.150"
# gtk = {version="0.7.3",package="gtk4",features=["v4_12"],optional=true}
